support morphia 2.0 and Java 11