@@ -1,7 +1,7 @@
 package it.unifi.cerm.playmorphia;
 
-
-import com.mongodb.MongoClient;
+import com.mongodb.client.MongoClient;
+import com.mongodb.client.MongoDatabase;
 import com.typesafe.config.Config;
 import play.Environment;
 import play.inject.ApplicationLifecycle;
@@ -14,14 +14,15 @@ import java.lang.reflect.Constructor;
 import java.util.concurrent.CompletableFuture;
 
 /**
- * Created by morelli on 21/02/19.
+ * @author morelli
  */
 @Singleton
 public class PlayMorphia {
 
     MongoClient mongo = null;
     Datastore datastore = null;
-    Morphia morphia = null;
+
+    MongoDatabase mongoDatabase = null;
 
     @Inject
     public PlayMorphia(ApplicationLifecycle lifecycle, Environment env, Config config) {
@@ -30,63 +31,45 @@ public class PlayMorphia {
         } catch (Exception e) {
             e.printStackTrace();
         }
-        lifecycle.addStopHook(()->{
-            if (env.isTest()) {
-                mongo().close();
-            }
+        lifecycle.addStopHook(() -> {
+            mongo().close();
             return CompletableFuture.completedFuture(null);
         });
     }
 
 
-    PlayMorphia(Config config, ClassLoader classLoader, boolean isTestMode) throws Exception {
-        configure(config, classLoader, isTestMode);
-    }
-
-
     private void configure(Config config, ClassLoader classLoader, boolean isTestMode) throws Exception {
 
-        String clientFactoryName = config.getString("playmorphia.mongoClientFactory");
+        final var clientFactoryName = config.getString("playmorphia.mongoClientFactory");
         MongoClientFactory factory = getMongoClientFactory(clientFactoryName, config, isTestMode);
-        mongo = factory.createClient();
+        this.mongo = factory.createClient();
 
         if (mongo == null) {
-            throw new IllegalStateException("No MongoClient was created by instance of "+ factory.getClass().getName());
+            throw new IllegalStateException("No MongoClient was created by instance of " + factory.getClass().getName());
         }
 
-        morphia = new Morphia();
-
-        // Tell Morphia where to find our models
-        morphia.mapPackage(factory.getModels());
-
-        datastore = morphia.createDatastore(
-                mongo, factory.getDBName());
-
+        this.datastore = Morphia.createDatastore(mongo, factory.getDbName());
+        this.datastore.getMapper().mapPackage(factory.getModels());
+        this.mongoDatabase = this.mongo.getDatabase(factory.getDbName());
     }
 
-    @SuppressWarnings({ "rawtypes", "unchecked" })
+    @SuppressWarnings({"rawtypes"})
     protected MongoClientFactory getMongoClientFactory(String className, Config config, boolean isTestMode) throws Exception {
 
         if (className != null) {
+            final var factoryClass = Class.forName(className, true, Thread.currentThread().getContextClassLoader());
+            if (!MongoClientFactory.class.isAssignableFrom(factoryClass)) {
+                throw new IllegalStateException("mongoClientFactory '" + className +
+                        "' is not of type " + MongoClientFactory.class.getName());
+            }
+            Constructor constructor = null;
             try {
-                Class factoryClass = Class.forName(className, true, Thread.currentThread().getContextClassLoader());
-                if (!MongoClientFactory.class.isAssignableFrom(factoryClass)) {
-                    throw new IllegalStateException("mongoClientFactory '" + className +
-                            "' is not of type " + MongoClientFactory.class.getName());
-                }
-
-                Constructor constructor = null;
-                try {
-                    constructor = factoryClass.getConstructor(Config.class);
-                } catch (Exception e) {
-                    // can't use that one
-                }
-                if (constructor == null) {
-                    return (MongoClientFactory) factoryClass.newInstance();
-                }
-                return (MongoClientFactory) constructor.newInstance(config);
-            } catch (ClassNotFoundException e) {
-                throw e;
+                constructor = factoryClass.getConstructor(Config.class);
+            } catch (Exception e) {
+                // can't use that one
+            }
+            if (constructor == null) {
+                return (MongoClientFactory) factoryClass.getDeclaredConstructor().newInstance();
             }
         }
         return new MongoClientFactory(config, isTestMode);
@@ -94,8 +77,15 @@ public class PlayMorphia {
 
 
     public MongoClient mongo() {
-        return mongo;
+        return this.mongo;
     }
-    public Datastore datastore() { return datastore; }
-    public Morphia morphia() { return morphia; }
+
+    public Datastore datastore() {
+        return this.datastore;
+    }
+
+
+    public MongoDatabase mongoDatabase() {
+        return this.mongoDatabase;
+    }
 }
